# ros2_vosk

./: README.md  package.xml  setup.cfg  setup.py
launch/: ros_vosk.launch
ros2_vosk/: tts_engine.py  vosk_client_example.py  vosk_node.py  vosk_ros_model_downloader.py  vosk_service.py
